--- a/src/scss/custom/components/_top.scss
+++ b/src/scss/custom/components/_top.scss
@@ -130,6 +130,7 @@
 /* NEWS
 --------------------------- */
 .section_news {
+	overflow: hidden;
 	background-color: rgba($body-background,1);
 	.button {
 		display: block;
